# sync-time-now-widget

./: Makefile.am  configure.ac  sync-time-now-menu-widget.c  sync-time-now-menu-widget.desktop  sync-time-now-menu-widget.h  sync-time-now-menu-widget.sudoers
debian/: changelog  control  rules
